--- a/problemSets/PS01/answer_key/PS01_answerKey.tex
+++ b/problemSets/PS01/answer_key/PS01_answerKey.tex
@@ -91,7 +91,7 @@
 	
 	
 	\vspace{.15cm}
-	\noindent First, let's calculate the t-score for the 90\% confidence interval with degrees of freedom equal to 24 (remember that df = $n-1$ for the t-distribution, and we're using the t-distribution because we have a small sample size). For the 90\% confidence interval, the lower tail is equal to 0.05 ($(1-\alpha)/2 = (1-0.90)/2 = 0.05$).\\
+	\noindent Answer: First, let's calculate the t-score for the 90\% confidence interval with degrees of freedom equal to 24 (remember that df = $n-1$ for the t-distribution, and we're using the t-distribution because we have a small sample size). For the 90\% confidence interval, the lower tail is equal to 0.05 ($(1-\alpha)/2 = (1-0.90)/2 = 0.05$).\\
 	
 	\lstinputlisting[language=R, firstline=40, lastline=48]{PS1_answerKey.R}  
 	
