--- a/problemSets/PS03/my_answers/PS3.tex
+++ b/problemSets/PS03/my_answers/PS3.tex
@@ -136,7 +136,9 @@
 		
 		\item Write the prediction equation.
 		
-		\noindent From the results of regression1 in Part 1.1, we can get the intercept and slope respectively. So the prediction equation would be:\\  \\ \texttt{voteshare= 0.579031 + 0.041666*difflog} \\ \\ In this model, difflog has a positive effect on voteshare, with each unit difflog increase, increasing the voteshare estimate by 0.04167. The  voteshare estimate by 0.57903 when difflog is zero.\\
+		\noindent From the results of regression1 in Part 1.1, we can get the intercept and slope respectively. So the prediction equation would be:\\  
+		\[ \hat{\texttt{voteshare}} = 0.579031 + 0.041666* \texttt{difflog} 
+		\]\\ In this model, difflog has a positive effect on voteshare, with each unit difflog increase, increasing the voteshare estimate by 0.04167. The  voteshare estimate by 0.57903 when difflog is zero.\\
 		
 	\end{enumerate}
 
@@ -195,7 +197,7 @@
 		
 		\item Write the prediction equation.
 		
-		\noindent From the results of regression2 in Part 2.1, we can get the intercept and slope respectively. So the prediction equation would be:\\  \\ \texttt{presvote= 0.507583 + 0.023837*difflog} \\  \\In this model, difflog has a positive effect on presvote, the expected value of presvote would be 0.507583 when difflog is zero, with each addional unit change of difflog, the expected presvote changes by 0.023837.\\
+		\noindent From the results of regression2 in Part 2.1, we can get the intercept and slope respectively. So the prediction equation would be:\\  \[\hat{\texttt{presvote}}= 0.507583 + 0.023837*\texttt{difflog}\]   \\In this model, difflog has a positive effect on presvote, the expected value of presvote would be 0.507583 when difflog is zero, with each addional unit change of difflog, the expected presvote changes by 0.023837.\\
 		
 	\end{enumerate}
 	
@@ -252,7 +254,7 @@
 		
 		\newpage	
 		\item Write the prediction equation.\\
-		\noindent \\From the results of regression3 in Part 3.1, we can get the intercept and slope respectively. So the prediction equation would be:\\  \\ \texttt{voteshare= 0.441330 + 0.388018*presvote} \\ \\ In this model, presvote has a positive effect on voteshare, the estimate value of voteshare would be 0.441330 when presvote is zero, with each addional unit change of presvote, the estimate voteshare changes by 0.388018.\\
+		\noindent \\From the results of regression3 in Part 3.1, we can get the intercept and slope respectively. So the prediction equation would be:\\  \[ \hat{\texttt{voteshare}}= 0.441330 + 0.388018*\texttt{presvote} \] \\ In this model, presvote has a positive effect on voteshare, the estimate value of voteshare would be 0.441330 when presvote is zero, with each addional unit change of presvote, the estimate voteshare changes by 0.388018.\\
 
 	\end{enumerate}
 	
@@ -306,7 +308,7 @@
 		\newpage
 		\item Write the prediction equation.
 		
-		\noindent \\From the results of regression4 in Part 4.1, we can get the intercept and slope respectively. So the prediction equation would be:\\  \\ \texttt{residuals\textunderscore{}reg1 = -1.942e-18 + (2.569e-01)*residuals\textunderscore{}reg2} \\  \\In this model, residuals\textunderscore{}reg2 has a positive effect on residuals\textunderscore{}reg1, the estimate value of residuals\textunderscore{}reg1 would be -1.942e-18 when residuals\textunderscore{}reg2 is zero, with each addional unit change of residuals\textunderscore{}reg2, the estimate residuals\textunderscore{}reg1 changes by 2.569e-01.\\
+		\noindent \\From the results of regression4 in Part 4.1, we can get the intercept and slope respectively. So the prediction equation would be:\\  \[ \hat{\texttt{residuals\textunderscore{}reg1}} = -1.942e-18 + (2.569e-01)*\texttt{residuals\textunderscore{}reg2} \]  \\In this model, residuals\textunderscore{}reg2 has a positive effect on residuals\textunderscore{}reg1, the estimate value of residuals\textunderscore{}reg1 would be -1.942e-18 when residuals\textunderscore{}reg2 is zero, with each addional unit change of residuals\textunderscore{}reg2, the estimate residuals\textunderscore{}reg1 changes by 2.569e-01.\\
 		
 	\end{enumerate}
 	
@@ -349,7 +351,7 @@
 		\newpage
 		\item Write the prediction equation.	\vspace{.15cm}
 		
-		\noindent \\From the results of regression5 in Part 5.1, we can get the intercept and slopes respectively. So the prediction equation would be:\\  \\ \texttt{voteshare = 0.4486442 + 0.0355431*difflog + 0.2568770*presvote} \\  \\In this model, both difflog and presvote have positive effects on voteshare, the estimate value of voteshare would be 0.4486442 when difflog and presvote are zero. Controlling presvote unchanged, with each addional unit change of difflog, the estimate voteshare changes by 0.0355431. Controlling difflog unchanged, with one unit presvote  increase, increasing the voteshare estimate by 0.2568770.\\
+		\noindent \\From the results of regression5 in Part 5.1, we can get the intercept and slopes respectively. So the prediction equation would be:\\  \[ \hat{\texttt{voteshare}} = 0.4486442 + 0.0355431*\texttt{difflog} + 0.2568770*\texttt{presvote} \]  \\In this model, both difflog and presvote have positive effects on voteshare, the estimate value of voteshare would be 0.4486442 when difflog and presvote are zero. Controlling presvote unchanged, with each addional unit change of difflog, the estimate voteshare changes by 0.0355431. Controlling difflog unchanged, with one unit presvote  increase, increasing the voteshare estimate by 0.2568770.\\
 		
 		\item What is it in this output that is identical to the output in Question 4? Why do you think this is the case?\\
 		
